--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,8 @@
 
 @import '../components/Navigation/Navigation';
 @import '../components/IndexSlider/IndexSlider';
+@import '../components/DiscoverSection/DiscoverSection';
+@import '../components/Card/Card';
 
 * {
     padding: 0;
