--- a/styles/pages/index.scss
+++ b/styles/pages/index.scss
@@ -4,13 +4,21 @@
     background: -webkit-linear-gradient(180deg, rgba(14, 11, 57, 1) 0%, rgba(4, 3, 23, 1) 100%);
     background: linear-gradient(180deg, rgba(14, 11, 57, 1) 0%, rgba(4, 3, 23, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0e0b39", endColorstr="#040317", GradientType=1);
-    width: 100%;
-    height: 100vh;
+    transition: all 0.3s ease-in-out;
+
+    &.openMenu {
+        margin-left: 60px !important;
+        transition: all 0.3s ease-in-out;
+    }
 
     .slogan {
         color: white;
         font-size: 32px;
         text-align: center;
-        margin: 72px 0px 72px 0px;
+        padding: 108px 0px 72px 0px;
+
+        @media(max-width: 768px) {
+            font-size: 18px;
+        }
     }
 }
